--- a/notebooks/testing/3dimenet_plus_plus.ipynb
+++ b/notebooks/testing/3dimenet_plus_plus.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/nm_rostislav/qsar_flash\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ~/qsar_flash/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +59,15 @@
     "    num_output_layers=3,\n",
     ")\n",
     "\n",
+    "lr_scheduler_kwargs = dict(\n",
+    "    max_lr=0.0001,\n",
+    "    total_steps=len(datamodule.train_dataset)  # type: ignore\n",
+    ")\n",
+    "\n",
+    "lr_scheduler_pl_kwargs = dict(\n",
+    "    interval='step'\n",
+    ")\n",
+    "\n",
     "class DimenetMolecularGraphHead(torch.nn.Module):\n",
     "    def __init__(self, hidden_channels: int, dropout: float = 0.5):\n",
     "        super().__init__()\n",
@@ -87,78 +88,39 @@
     "\n",
     "model = MolecularGraphRegressor(\n",
     "    backbone=\"DimeNet++\", metrics=MeanAbsoluteError(), learning_rate=0.001, pooling_fn=\"add\", optimizer=\"AdamW\",\n",
-    "    backbone_kwargs=backbone_kwargs, head=DimenetMolecularGraphHead(backbone_kwargs[\"out_channels\"]), \n",
+    "    backbone_kwargs=backbone_kwargs, head=DimenetMolecularGraphHead(backbone_kwargs[\"out_channels\"]), lr_scheduler=(\"onecyclelr\", lr_scheduler_kwargs, lr_scheduler_pl_kwargs)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/home/nm_rostislav/miniconda3/envs/qsar-flash/lib/python3.9/site-packages/pytorch_lightning/trainer/trainer.py:1823: PossibleUserWarning: GPU available but not used. Set `accelerator` and `devices` using `Trainer(accelerator='gpu', devices=3)`.\n",
-      "  rank_zero_warn(\n",
-      "Running in fast_dev_run mode: will run a full train, val, test and prediction loop using 1 batch(es).\n",
-      "`Trainer(limit_train_batches=1)` was configured so 1 batch per epoch will be used.\n",
-      "`Trainer(limit_val_batches=1)` was configured so 1 batch will be used.\n",
-      "`Trainer(limit_test_batches=1)` was configured so 1 batch will be used.\n",
-      "`Trainer(limit_predict_batches=1)` was configured so 1 batch will be used.\n",
-      "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n",
-      "\n",
-      "  | Name          | Type                      | Params\n",
-      "------------------------------------------------------------\n",
-      "0 | train_metrics | ModuleDict                | 0     \n",
-      "1 | val_metrics   | ModuleDict                | 0     \n",
-      "2 | test_metrics  | ModuleDict                | 0     \n",
-      "3 | backbone      | DimeNetPlusPlusBackbone   | 2.9 M \n",
-      "4 | head          | DimenetMolecularGraphHead | 16.6 K\n",
-      "------------------------------------------------------------\n",
-      "2.9 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "2.9 M     Total params\n",
-      "11.712    Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "385e9816f88545a490c6600574122e11",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fda2080bdad44b48df521b8f8eda9a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Validation: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import wandb\n",
+    "\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.loggers import WandbLogger\n",
+    "from pytorch_lightning.callbacks import LearningRateMonitor\n",
+    "\n",
+    "wandb_logger = WandbLogger(\n",
+    "    name=\"dimenet++-test\",\n",
+    "    project=\"graph-drug\",\n",
+    "    entity=\"inno-materials-ai\",\n",
+    ")\n",
+    "lr_monitor = LearningRateMonitor(logging_interval='step') \n",
+    "\n",
     "# 3. Create the trainer and fit the model\n",
-    "trainer = flash.Trainer(max_epochs=50, gpus=None, gradient_clip_val=10., fast_dev_run=True)\n",
+    "trainer = flash.Trainer(max_epochs=50, gpus=[1], logger=wandb_logger, callbacks=[lr_monitor], gradient_clip_val=10, track_grad_norm=2)\n",
     "trainer.fit(model, datamodule=datamodule)"
    ]
   },
