--- a/notebooks/testing/1schnet.ipynb
+++ b/notebooks/testing/1schnet.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/nm_rostislav/qsar_flash\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ~/qsar_flash/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MolecularGraphRegressor.available_backbones()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MolecularGraphRegressor.available_lr_schedulers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,73 +66,49 @@
     "    cutoff=10.,\n",
     "    max_num_neighbors=32,\n",
     ")\n",
+    "\n",
+    "lr_scheduler_kwargs = dict(\n",
+    "    max_lr=0.0001,\n",
+    "    total_steps=len(datamodule.train_dataset)  # type: ignore\n",
+    ")\n",
+    "\n",
+    "lr_scheduler_pl_kwargs = dict(\n",
+    "    interval='step'\n",
+    ")\n",
     "model = MolecularGraphRegressor(\n",
-    "    backbone=\"SchNet\", metrics=MeanAbsoluteError(), learning_rate=0.0001, pooling_fn=\"add\", optimizer=\"Adam\", loss_fn=F.l1_loss,\n",
+    "    backbone=\"SchNet\", metrics=MeanAbsoluteError(), learning_rate=0.0001, pooling_fn=\"add\", optimizer=\"Adam\", loss_fn=F.l1_loss,  lr_scheduler=(\"onecyclelr\", lr_scheduler_kwargs, lr_scheduler_pl_kwargs),\n",
     "    backbone_kwargs=backbone_kwargs\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True, used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2]\n",
-      "\n",
-      "  | Name          | Type                      | Params\n",
-      "------------------------------------------------------------\n",
-      "0 | train_metrics | ModuleDict                | 0     \n",
-      "1 | val_metrics   | ModuleDict                | 0     \n",
-      "2 | test_metrics  | ModuleDict                | 0     \n",
-      "3 | backbone      | SchNetBackbone            | 485 K \n",
-      "4 | head          | DefaultMolecularGraphHead | 16.6 K\n",
-      "------------------------------------------------------------\n",
-      "502 K     Trainable params\n",
-      "0         Non-trainable params\n",
-      "502 K     Total params\n",
-      "2.010     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed67fa5874054e0392fd8efb625b15e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Sanity Checking: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20229c3abda842bea0c7c320b75a26bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: 0it [00:00, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import wandb\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.loggers import WandbLogger\n",
+    "from pytorch_lightning.callbacks import LearningRateMonitor\n",
+    "\n",
+    "wandb_logger = WandbLogger(\n",
+    "    name=\"schnet-test\",\n",
+    "    project=\"graph-drug\",\n",
+    "    entity=\"inno-materials-ai\",\n",
+    ")\n",
+    "lr_monitor = LearningRateMonitor(logging_interval='step') \n",
+    "\n",
     "# 3. Create the trainer and fit the model\n",
-    "trainer = flash.Trainer(max_epochs=50, gpus=[1])\n",
+    "trainer = flash.Trainer(max_epochs=50, gpus=[1], logger=wandb_logger, callbacks=[lr_monitor])\n",
     "trainer.fit(model, datamodule=datamodule)"
    ]
   },
